--- a/aboutUS.html
+++ b/aboutUS.html
@@ -40,7 +40,7 @@
                 <h1>應數三乙  鄧書涵</h1>
                 <p>
                     <b>負責內容：</b><br>
-                    建構網頁基礎架構、製作會員登入及購物車彈跳頁面、修改商品頁面排版、製作會員中心頁面及品牌故事頁面
+                    建構網頁基礎架構、響應式排版、製作會員登入及購物車彈跳頁面、修改商品頁面排版、製作會員中心頁面及品牌故事頁面
                 </p>
             </div>
         </div>
