--- a/item.html
+++ b/item.html
@@ -79,7 +79,9 @@
                                 <textarea name="memo" cols="100" rows="10" wrap="hard" class="area" placeholder="請寫下您的評論！"></textarea>
                             </div>
                         </div>
-                        <button>送出</button>
+                        <div style="text-align: center;">
+                            <button>送出</button>
+                        </div>
                     </div>
                     <div></div>
                     <div>
