--- a/item.html
+++ b/item.html
@@ -26,7 +26,8 @@
     <!--內容-->
     <main>
         <!--商品圖與介紹-->
-        <section class="box two_item">
+        <section class="box two_item narrow">
+            <div></div><!--留空-->
             <div class="pro_photo">
                 <img id="commodity_img" src=""></img>
             </div>
@@ -41,6 +42,7 @@
                 </div>
                 <button>加入購物車</button>
             </div>
+            <div></div><!--留空-->
         </section>
 
         <!--商品介紹-->
