--- a/VIP.html
+++ b/VIP.html
@@ -34,7 +34,7 @@
         <aside>
             <!--我的資料-->
             <div id="info" class="vip_card">
-                <form action="" method="post" style="margin-left: 20px;">
+                <form action="" style="margin-left: 20px;">
                     <h3>我的資料</h3>
                     <a>姓名： <input type="text" name="name" size="20" placeholder="Anna Wang"></a><br>
                     <a>
