--- a/item.html
+++ b/item.html
@@ -40,7 +40,7 @@
                 <div id="commodity_info">
                     <!--詳細資訊內容-->
                 </div>
-                <button>加入購物車</button>
+                <button class="btn_item">加入購物車</button>
             </div>
             <div></div><!--留空-->
         </section>
@@ -82,7 +82,7 @@
                             </div>
                         </div>
                         <div style="text-align: center;">
-                            <button>送出</button>
+                            <button class="btn_item">送出</button>
                         </div>
                     </div>
                     <div></div>
